--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,23 @@
   --background-color : #01012B;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html{
   font-size: 62.5%;
   font-family: var(--primary-font);
+  color: var(--text-white);
 }
 
 a{
   text-decoration: none;
-}          
+  color: var(--text-white);
+}     
+
+body{
+  background-color: var(--background-color);
+}
