--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -3,3 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#header{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.backgroundImg{
+    background-image:linear-gradient(to bottom, #01012b00, #01012B 100%), url(../assets/background.webp);
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+}
+
+.backgroundImg::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+    z-index: 1;
+}
