--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 .backgroundImg{
     background-image:linear-gradient(to bottom, #01012b00, #01012B 100%), url(../assets/background.webp);
