--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -1,8 +1,8 @@
 #accordion{
-    padding: 50px;
+    padding:  50px;
     background-color: var(--cardBg-color);
     box-shadow: 0 0 7px var(--text-white);
-    border-radius: 20px;
+    border-radius: 20px 0px 20px 0;
     display: flex;
     flex-direction: column;
     gap: 50px;
