--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -55,6 +55,7 @@
     flex-direction: column;
     padding-top: 50px;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 .title{
     font-size: 5.8rem;
