:pencil: feat: add real info in cards

--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -55,6 +55,9 @@
   letter-spacing: 4px;
   font-size: 1.7rem;
 }
+.curriculo{
+  border: 2px solid red;
+}
 
 .profileImgContainer {
   display: flex;
