--- a/src/components/cardProject/cardProject.css
+++ b/src/components/cardProject/cardProject.css
@@ -11,10 +11,14 @@
 }
 .imgCard {
   width: 300px;
+  height: 160px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 5px;
 }
 .projectTitleBox {
   position: relative;
-  width: 50%;
+  width: 70%;
   text-align: center;
   padding: 2px 0;
   margin-bottom: 10px;
@@ -22,11 +26,11 @@
 .projectTitleBox::before {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 80%;
   height: 3px;
   z-index: 0;
   bottom: -8px;
-  right: 0;
+  right: 10%;
   background: var(--secondary-color);
   background: linear-gradient(
     90deg,
