--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,37 +1,82 @@
-#navBar{
-    border-bottom: 1px solid var(--text-white);
-    width: 100%;
+#navBar {
+  border-bottom: 1px solid var(--text-white);
+  width: 100%;
 }
-.navContent{
-    display: flex;
-    justify-content: space-between;
-    max-width: 1980px;
-    margin-inline: auto;
-    padding: 15px 5%;
+.navContent {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1980px;
+  margin-inline: auto;
+  padding: 15px 5%;
 }
-.logo{
-    font-size: 2.6rem;
-    font-weight: 600;
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    max-width: 285px;
-    padding: 0;
-    letter-spacing: 1.5%;
+.logo {
+  font-size: 2.6rem;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  max-width: 285px;
+  padding: 0;
+  letter-spacing: 1.5%;
 }
-.logo span{
-    display: flex;
-    justify-content: flex-end;
+.logo span {
+  display: flex;
+  justify-content: flex-end;
 }
-.links{
-    font-size: 1.5rem;
-    font-weight: 400;
-    letter-spacing: 1px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 100px;
-    width: 70%;
+.links {
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 100px;
+  width: 70%;
 }
 
+.menu {
+  display: none;
+}
+#menuNav{
+    display: none;
+}
+#menuNavClose{
+    display: none;
+}
+
+@media (max-width: 1100px) {
+  .links {
+    display: none;
+  }
+  .menu {
+    display: flex;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
+  #menuNav{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: absolute;
+    top: 120px;
+    right: 20px;
+    padding: 30px;
+    border-radius: 15px;
+    background-color: var(--cardBg-color);
+    border: 2px solid #fff;
+    z-index: 10;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+  }
   
+  .menuLink{
+    list-style: none;
+  }
+  #menuNavClose{
+    display: none;
+  }
+  .navContent{
+    align-items: center;
+  }
+}
