--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -24,13 +24,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 10%;
   max-width: 1680px;
   max-height: 1000px;
   padding: var(--paddingSection);
 }
 
 .aboutMeImg {
-  width: 450px;
+  max-width: 40%;
 }
 .aboutMeContent {
   max-width: 600px;
@@ -38,6 +39,9 @@
   display: flex;
   flex-direction: column;
   color: var(--text-white);
+}
+#aboutMeTitle {
+  margin: 20px 0px;
 }
 #projects {
   width: 100%;
@@ -135,4 +139,49 @@
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
   z-index: 1;
+}
+
+@media (max-width: 950px) {
+  #aboutMe {
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+    height: fit-content;
+  }
+  .aboutMeImg {
+    max-width: 50%;
+  }
+  .aboutMeContent {
+    text-align: center;
+  }
+  .title {
+    font-size: 5rem;
+  }
+  #header{
+    max-height: 900px;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 4rem;
+  }
+
+  .aboutMeSubtitle {
+    font-size: 1.5rem;
+    gap: 20px;
+  }
+  .aboutMeImg{
+    min-width: 180px;
+  }
+}
+
+@media (max-width: 450px) {
+  .title {
+    font-size: 3rem;
+  }
+
+  .aboutMeSubtitle {
+    font-size: 1.3rem;
+  }
 }
