:iphone: responsive: add swiperCarroussel to mobile Cards

--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: space-between;
     width: 80%;
+    font-weight: 400;
 }
 .accordionItem{
     background-color: var(--text-white);
@@ -44,4 +45,5 @@
     font-family: var(--secondary-font);
     font-weight: 600;
     font-size: 1.6rem;
+    font-weight: 500;
 }
