--- a/src/components/FormsContact/FormsContact.css
+++ b/src/components/FormsContact/FormsContact.css
@@ -14,6 +14,7 @@
 }
 .inputContact {
   margin-top: 5px;
+  width: 100%;
 }
 .submitButton {
   color: var(--text-white);
@@ -32,7 +33,9 @@
 .modalInput {
   color: var(--text-white);
   height: 40px;
-  border: 1px solid var(--text-white);
+  border: none;
+  box-shadow: 0 0 7px var(--text-white);
+  border-radius: 15px;
   outline: none;
   padding: 0px 20px;
   font-family: var(--secondary-font);
@@ -42,4 +45,24 @@
 }
 .modalLabel {
   font-size: 1.6rem;
+}
+
+@media(max-width: 1200px){
+  #emailSmallInputContainer {
+    gap: 50px;
+  }
+  .inputContact {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  #emailSmallInputContainer {
+    flex-direction: column;
+    gap: 0px;
+  }
+  .inputContact {
+    margin-top: 10px;
+    width: 100%;
+  }
 }
