--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -160,7 +160,12 @@
 .responsiveCards{
   display: none;
 }
-
+@media(max-width: 1200px){
+  .contactSectionContent{
+    flex-direction: column;
+    gap: 100px;
+  }
+}
 
 @media (max-width: 950px) {
   #aboutMe {
@@ -177,6 +182,7 @@
   }
   .title {
     font-size: 5rem;
+    text-align: center;
   }
   #header{
     max-height: 900px;
