--- a/src/components/cardProject/cardProject.css
+++ b/src/components/cardProject/cardProject.css
@@ -59,6 +59,7 @@
 }
 .projectDescription {
   font-size: 1.5rem;
+  font-weight: 400;
 }
 .projectButtons {
   display: flex;
@@ -72,7 +73,8 @@
   border-radius: 20px;
   border: 1px solid var(--text-white);
   cursor: pointer;
-  text-shadow: 3px 3px 10px rgba(0, 0, 0, 1);
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+  font-weight: 600;
 }
 #primaryBtn {
   background-color: var(--primary-color);
@@ -80,5 +82,38 @@
 }
 #secondaryBtn {
   background-color: var(--secondary-color);
-  color: var(--text-white);
+  color: var(--cardBg-color);
+}
+
+@media (max-width: 500px) {
+  #card {
+    height: 350px;
+    width: 230px;
+  }
+  .imgCard {
+    width: 200px;
+    height: 100px;
+  }
+  .projectTitle {
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+  }
+  .projectTechs {
+    padding: 6px 0px;
+    gap: 15px;
+  }
+  .techImgCard {
+    width: 25px;
+  }
+  .projectDescription {
+    font-size: 1.2rem;
+  }
+  .cardButton {
+    width: 85px;
+    height: 30px;
+    border-radius: 15px;
+    font-size: 1.1rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+  }
 }
