--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -126,7 +126,7 @@
 }
 .backgroundImg {
   background-image: linear-gradient(to bottom, #01012b00, #01012b 100%),
-    url(../assets/background.webp);
+    url(../assets/background.jpg);
   background-size: cover;
   width: 100%;
   height: 100vh;
